@@ -63,7 +63,6 @@
   font-size: small;
   background-color: transparent;
   border-spacing: 0px;
-  border: 1px solid #8cacbb;
 }
 
 
